Release CMTK-2.2.2:

(r4369) Added: new "streamxform" tool to apply sequences of transformations to
    point coordinates read from standard input. The old tool, "gregxform", has
    been deprecated and may be removed in a future release of CMTK.
(r4351) Changed: all nonrigid transformation files, "registration," are now
    written gzip-compressed. (Linear transformation files are generally much
    smaller and continue to be written as plain uncompressed files.)
(r4347) Added: "dcm2image" tool has two new options, "--filter" and
    "--exclude", to include or exclude DICOM files selectively based on
    matching a provided text to values of user-specified DICOM tags.
(r4326) Added: ADNI phantom detector now also computes SNR and four CNR
    estimates. These are all also written to the XML phantom description
    file.
(r4317) Fixed: older versions of DCMTK do not provide lossless-JPEG header
    file <dcmtk/dcmjpls/djdecode.h>, but it isn't needed anyway.


Release CMTK-2.2.1 (2012-05-07):

(r4313) Fixed: previous release accidentally installed and packaged the entire
    source tree, rather than just the Licenses/ directory. This has been fixed.


Release CMTK-2.2.0 (2012-05-04):

(r4280) Updated: bundled MiniXML (mxml) library is now version 2.7
(r4256) Changed: the "search" and "replace" parts of the CMTK_MOUNTPOINTS
    variable have been switched. The new order is far more intuitive.
(r4240) Fixed: one of the functions computing Jacobian matrices for B-spline
    FFD transformations was broken, leading to slightly skewed inverse
    transformations in various tools. Due to direct optimization of the
    inversion error, the actual inversion results were still accurate within
    the given tolerance.
(r4195) Added: tool for unwarping images using B-spline free-form deformation
    computed from a reference scan of the ADNI phantom.
(r4180) Added: detection of the landmarks in the Magphan EMR051 structural