@@ -1,5 +1,8 @@
 Release CMTK-2.2.2:
 
+Changed: the "fit_spline_xform" tool has been renamed to "fit_spline_dfield"
+to make room for a new tool which will fit splines to arbitrary transformation
+sequences.
 (r4369) Added: new "streamxform" tool to apply sequences of transformations to
     point coordinates read from standard input. The old tool, "gregxform", has
     been deprecated and may be removed in a future release of CMTK.
